name: checklists
version: 1.0.0

build-type: Simple
cabal-version: >= 1.10


executable build
  default-language:
    Haskell2010

  default-extensions:
    ExtendedDefaultRules
    OverloadedStrings

  hs-source-dirs:
    src,
    system

  main-is:
    Main.hs

  other-modules:
    Catalogs
    Pages.Proxy

  build-depends:
    aeson == 0.11.*,
    base,
    flow == 1.*,
    icidasset-template == 1.*,
    lucid,
    shikensu == 0.1.*,
    text == 1.*,
    unordered-containers == 0.2.*

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
